--- a/license-index.html
+++ b/license-index.html
@@ -5,7 +5,7 @@
         <style>
             body
             {
-                font-family: Monaco, "DejaVu Sans Mono", "Noto Mono", monospace;
+                font-family: Monaco, Menlo, "DejaVu Sans Mono", "Liberation Mono", "Noto Mono", "Ubuntu Mono", monospace;
                 font-size: 12px;
                 margin: 0;
                 user-select: none;
@@ -27,7 +27,7 @@
         <div class="contents">
             <p class="header">MIT License</p>
             <p>
-                Copyright (c) 2017-2020 Michel Mariani
+                Copyright (c) 2017-2021 Michel Mariani
             </p>
             <p>
                 Permission is hereby granted, free of charge, to any person obtaining a copy
